Commited in the 45003_login_logout branch

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -25,3 +25,13 @@ en:
   error_msg: "The form contains"
   btn_text_signup: "Create my account"
   signup_prompt_text: "Signup now"
+  login_failer_message: "Invalid email/password combination"
+  header_partial_home_text: "Home"
+  header_partial_help_text: "Help"
+  header_partial_sample_app_text: "FELS"
+  header_partial_profile_text: "Profile"
+  header_partial_setting_text: "Setting"
+  header_partial_dropdown_header_text: "Account"
+  header_partial_logout_text: "Login"
+  header_partial_login_text: "Login"
+  session_new_submit_text: "Submit"
