--- a/config/locales/jp.yml
+++ b/config/locales/jp.yml
@@ -5,3 +5,13 @@ jp:
   error_msg: "フォームが含まれています"
   btn_text_signup: "アカウントを作る"
   signup_prompt_text: "今すぐサインアップ"
+  login_failer_message: "無効な電子メール/パスワードの組み合わせ"
+  header_partial_home_text: "ホーム"
+  header_partial_help_text: "助けて"
+  header_partial_sample_app_text: "フェルス"
+  header_partial_profile_text: "プロフィール"
+  header_partial_setting_text: "設定"
+  header_partial_dropdown_header_text: "アカウント"
+  header_partial_logout_text: "ログアウト"
+  header_partial_login_text: "ログイン"
+  session_new_submit_text: "提出します"
