--- a/config/locales/vn.yml
+++ b/config/locales/vn.yml
@@ -5,3 +5,13 @@ vn:
   error_msg: "Mẫu đơn này có"
   btn_text_signup: "tạo tài khoản của tôi"
   signup_prompt_text: "Đăng ký ngay"
+  login_failer_message: "Email không hợp lệ / kết hợp mật khẩu"
+  header_partial_home_text: "Nhà"
+  header_partial_help_text: "cứu giúp"
+  header_partial_sample_app_text: "FELS"
+  header_partial_profile_text: "Hồ sơ"
+  header_partial_setting_text: "cài đặt"
+  header_partial_dropdown_header_text: "Tài khoản"
+  header_partial_logout_text: "đăng xuất"
+  header_partial_login_text: "đăng nhập"
+  session_new_submit_text: "đệ trình"
