Committed in the 45385_45386_Login_using_remember_me

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,6 +32,9 @@ en:
   header_partial_profile_text: "Profile"
   header_partial_setting_text: "Setting"
   header_partial_dropdown_header_text: "Account"
-  header_partial_logout_text: "Login"
+  header_partial_logout_text: "Logout"
   header_partial_login_text: "Login"
   session_new_submit_text: "Submit"
+  session_new_remember_me_text: "Remember me in this computer"
+  session_new_new_user_text: "New user?"
+  session_new_signup_new_text: "Signup now"
