--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,6 +20,9 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 en:
   hello: "Welcome to the Sample App!"
+  users_update_success_text: "Profile updated"
+  users_destroy_success_text: "User deleted"
+  login_request_text: ""
   login_error: "Signup is not successful"
   construction_notice: "This site is under construction.If you are developer please make it quickly. If you are user please stay with us."
   error_msg: "The form contains"
@@ -28,13 +31,25 @@ en:
   login_failer_message: "Invalid email/password combination"
   header_partial_home_text: "Home"
   header_partial_help_text: "Help"
+  header_partial_all_user_text: "Users"
   header_partial_sample_app_text: "FELS"
   header_partial_profile_text: "Profile"
   header_partial_setting_text: "Setting"
   header_partial_dropdown_header_text: "Account"
   header_partial_logout_text: "Logout"
   header_partial_login_text: "Login"
+  user_partial_follow_text: "Follow"
+  user_partial_delete_text: "Delete"
+  user_partial_delete_confirmation_text: "Are you sure?"
+  user_edit_gravatar_change_text: "Change"
+  user_edit_save_changes_text: "Submit changes"
   session_new_submit_text: "Submit"
   session_new_remember_me_text: "Remember me in this computer"
   session_new_new_user_text: "New user?"
   session_new_signup_new_text: "Signup now"
+  title_user_index_text: "All users"
+  title_user_edit_text: "Edit"
+  title_session_new: "New"
+  footer_framgia_name_text: "Farmgia Bangladesh Limited"
+  footer_partial_about_text: "About"
+  footer_contact_partial_text: "Contact"
