--- a/config/locales/jp.yml
+++ b/config/locales/jp.yml
@@ -1,5 +1,8 @@
 jp:
   hello: "サンプルアプリケーションへようこそ！"
+  users_update_success_text: "プロフィール更新"
+  users_destroy_success_text: "ユーザー削除"
+  login_request_text: "ログインしてください"
   login_error: "サインアップは成功しません"
   construction_notice: "このサイトでは、開発者に迅速にそれをしてくださいですconstruction.If下にあります。あなたがユーザーである場合は私たちと一緒にしてください。"
   error_msg: "フォームが含まれています"
@@ -8,13 +11,24 @@ jp:
   login_failer_message: "無効な電子メール/パスワードの組み合わせ"
   header_partial_home_text: "ホーム"
   header_partial_help_text: "助けて"
+  header_partial_all_user_text: "ユーザー"
   header_partial_sample_app_text: "フェルス"
   header_partial_profile_text: "プロフィール"
   header_partial_setting_text: "設定"
   header_partial_dropdown_header_text: "アカウント"
   header_partial_logout_text: "ログアウト"
   header_partial_login_text: "ログイン"
+  user_partial_follow_text: "フォロー"
+  user_partial_delete_text: "削除"
+  user_partial_delete_confirmation_text: "本気ですか？"
+  user_edit_gravatar_change_text: "変更"
+  user_edit_save_changes_text: "変更を送信"
   session_new_submit_text: "提出します"
   session_new_remember_me_text: "このコンピュータで私を覚えて"
   session_new_new_user_text: "新規ユーザー？"
   session_new_signup_new_text: "今すぐサインアップ"
+  title_user_index_text: "すべてのユーザー"
+  title_user_edit_text: "編集"
+  title_session_new: "新しい"
+  footer_partial_about_text: "約"
+  footer_contact_partial_text: "接触"
