--- a/config/locales/vn.yml
+++ b/config/locales/vn.yml
@@ -1,5 +1,8 @@
 vn:
   hello: "Chào mừng bạn đến App mẫu !"
+  users_update_success_text: "Hồ sơ cá nhân đã cập nhật"
+  users_destroy_success_text: "dùng đã bị xóa"
+  login_request_text: "Vui lòng hãy đăng nhập"
   login_error: "Đăng ký không thành công"
   construction_notice: "Trang web này là thuộc construction.If bạn là nhà phát triển hãy làm cho nó nhanh chóng . Nếu bạn là người dùng hãy ở lại với chúng tôi ."
   error_msg: "Mẫu đơn này có"
@@ -8,13 +11,23 @@ vn:
   login_failer_message: "Email không hợp lệ / kết hợp mật khẩu"
   header_partial_home_text: "Nhà"
   header_partial_help_text: "cứu giúp"
+  header_partial_all_user_text: "người sử dụng"
   header_partial_sample_app_text: "FELS"
   header_partial_profile_text: "Hồ sơ"
   header_partial_setting_text: "cài đặt"
   header_partial_dropdown_header_text: "Tài khoản"
   header_partial_logout_text: "đăng xuất"
   header_partial_login_text: "đăng nhập"
+  user_partial_follow_text: "Làm theo"
+  user_partial_delete_text: "Xóa bỏ"
+  user_partial_delete_confirmation_text: "Bạn có chắc không?"
+  user_edit_gravatar_change_text: "sự thay đổi"
   session_new_submit_text: "đệ trình"
   session_new_remember_me_text: "Hãy nhớ tôi trên máy tính này"
   session_new_new_user_text: "Người dùng mới?"
   session_new_signup_new_text: "Đăng ký ngay"
+  title_user_index_text: "Tất cả người dùng"
+  title_user_edit_text: "chỉnh sửa"
+  title_session_new: "mới"
+  footer_partial_about_text: "Trong khoảng"
+  footer_contact_partial_text: "Liên Hệ"
