Commited after implementing following-follwers

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -53,3 +53,5 @@ en:
   footer_framgia_name_text: "Farmgia Bangladesh Limited"
   footer_partial_about_text: "About"
   footer_contact_partial_text: "Contact"
+  user_show_follow_button_text: "Follow"
+  user_show_unfollow_button_text: "Unfollow"
